--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" type="image/png" href="assets/images/images/logo.png">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/hero.css">
+    <link rel="stylesheet" href="assets/css/intro.css">
+    <link rel="stylesheet" href="assets/css/skills.css">
 </head>
 <body>
     <header class="container">
@@ -36,6 +38,84 @@
         <img class="hero-avatar" src="./assets/images/images/avatar.svg"
         alt="">
         <img class="hero-device" src="./assets/images/images/hero-devices.svg" alt="">
+    </section>
+    <section class="intro">
+        <div class="container">
+            <div class="box">
+                <p class="title">Oi, eu sou Bruno da Silva, tudo bem?</p>
+                <p class="subtitle">Desde que comecei minha jornada como designer freelancer, há 12 anos, fiz trabalhos remotos para agências, ajudei startups e colaborei com pessoas talentosas para criar produtos digitais para ambos uso empresarial e do consumidor. Sou bastante confiante, naturalmente curioso e trabalho para melhorar minhas habilidades constantemente.</p>
+
+
+            </div>
+        </div>
+    </section>
+    <section class="skills">
+        <div class="skills-overlay"></div>
+        <div class="container">
+            <div class="grid">
+                <div class="skill">
+                    <div class="skill-icon">
+                        <img src="assets/images/images/design.svg" alt=""/>
+                    </div>
+                    <p class="skill-title">Designer</p>
+                    <p class="skill-desc">Eu valorizo estruturas simples, design clean e interações customizadas</p>
+                    <p class="skill-sub">Coisas que eu gosto de desenhar</p>
+                    <p class="skill-txt">UX, UI, Web, Apps, Logos</p>
+                    <p class="skill-sub">Ferramentas que uso</p>
+                    <div class="skill-text">
+                        <ul>
+                            <li>Afffinity Designer</li>
+                            <li>Figma</li>
+                            <li>Paoel & Caneta</li>
+                            <li>Sketch</li>
+                            <li>WebFlow</li>
+                        </ul>
+                    </div>
+
+                </div> 
+                <div class="skill">
+                    <div class="skill-icon">
+                        <img src="assets/images/images/code.svg" alt=""/>
+                    </div>
+                    <p class="skill-title">Frontend Devoloper</p>
+                    <p class="skill-desc">Gosto de codificar projetos do zero, trazer ideias a vida no navegador</p>
+                    <p class="skill-sub">Linguagens que uso</p>
+                    <p class="skill-txt">HTML, CSS, Typescript, React</p>
+                    <p class="skill-sub">Ferramentas que uso</p>
+                    <div class="skill-text">
+                        <ul>
+                            <li>Github</li>
+                            <li>Tailwind</li>
+                            <li>Reacy</li>
+                            <li>VSCode</li>
+                            <li>Xcode</li>
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="skill">
+                    <div class="skill-icon">
+                        <img src="assets/images/images/video.svg" alt=""/>
+                    </div>
+                    <p class="skill-title">Video Maker</p>
+                    <p class="skill-desc">Amo fazer videos com boas produções e efeitos especiais</p>
+                    <p class="skill-sub">Coisas que gosto de filemar</p>
+                    <p class="skill-txt">Pessoas, Produtos, Ambientes, Carros</p>
+                    <p class="skill-sub">Ferramentas que uso</p>
+                    <div class="skill-text">
+                        <ul>
+                            <li>Github</li>
+                            <li>Tailwind</li>
+                            <li>Reacy</li>
+                            <li>VSCode</li>
+                            <li>Xcode</li>
+                        </ul>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
     </section>
 
     <script type="text/javascript" src="assets/js/script.js"></script>
