--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/hero.css">
     <link rel="stylesheet" href="assets/css/intro.css">
     <link rel="stylesheet" href="assets/css/skills.css">
+    <link rel="stylesheet" href="assets/css/recent-work.css">
 </head>
 <body>
     <header class="container">
@@ -116,6 +117,56 @@
 
             </div>
         </div>
+    </section>
+    <section class="recent-work container">
+        <p class="title">Meus trabalhos recentes</p>
+        <p class="subtitle">Aqui estão alguns trabalhos que já fiz. Quer ver mais? <a href="">Entrar em contato</a></p>
+        <div class="grid">
+            <div class="item">
+                <img class="image" src="assets/images/images/works/wfdesignbuild.png" alt="">
+                <div class="overlay">
+                    <p>Aqui vai uma descrição sobre o projeto em si ou a própria empresa</p>
+                    <a href="" class="button">Visite o website</a>
+                </div>
+            </div>
+            <div class="item">
+                <img class="image" src="assets/images/images/works/burkettandco.png" alt="">
+                <div class="overlay">
+                    <p>Aqui vai uma descrição sobre o projeto em si ou a própria empresa</p>
+                    <a href="" class="button">Visite o website</a>
+                </div>
+            </div>
+            <div class="item">
+                <img class="image" src="assets/images/images/works/chronicled.png" alt="">
+                <div class="overlay">
+                    <p>Aqui vai uma descrição sobre o projeto em si ou a própria empresa</p>
+                    <a href="" class="button">Visite o website</a>
+                </div>
+            </div>
+            <div class="item">
+                <img class="image" src="assets/images/images/works/coupal.png" alt="">
+                <div class="overlay">
+                    <p>Aqui vai uma descrição sobre o projeto em si ou a própria empresa</p>
+                    <a href="" class="button">Visite o website</a>
+                </div>
+            </div>
+            <div class="item">
+                <img class="image" src="assets/images/images/works/glcsolutions.png" alt="">
+                <div class="overlay">
+                    <p>Aqui vai uma descrição sobre o projeto em si ou a própria empresa</p>
+                    <a href="" class="button">Visite o website</a>
+                </div>
+            </div>
+            <div class="item">
+                <img class="image" src="assets/images/images/works/wedlerengineering.png" alt="">
+                <div class="overlay">
+                    <p>Aqui vai uma descrição sobre o projeto em si ou a própria empresa</p>
+                    <a href="" class="button">Visite o website</a>
+                </div>
+            </div>
+        </div>
+        <a href="" class="button seemore">Deseja ver mais?</a>
+
     </section>
 
     <script type="text/javascript" src="assets/js/script.js"></script>
