--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="assets/css/intro.css">
     <link rel="stylesheet" href="assets/css/skills.css">
     <link rel="stylesheet" href="assets/css/recent-work.css">
+    <link rel="stylesheet" href="assets/css/worked-with.css">
+    <link rel="stylesheet" href="assets/css/collab.css">
 </head>
 <body>
     <header class="container">
@@ -167,6 +169,29 @@
         </div>
         <a href="" class="button seemore">Deseja ver mais?</a>
 
+    </section>
+    <section class="worked-with">
+        <div class="container">
+            <p class="title">
+                Já colaborei com várias empresas incríveis:
+            </p>
+            <div class="grid">
+                <img src="assets/images/images/clients/briteweb.svg" alt="">
+                <img src="assets/images/images/clients/bldrs.png" alt="">
+                <img src="assets/images/images/clients/chronicled.svg" alt="">
+                <img src="assets/images/images/clients/designlab.png" alt="">
+                <img src="assets/images/images/clients/domain7.svg" alt="">
+                <img src="assets/images/images/clients/download.png" alt="">
+                <img src="assets/images/images/clients/redstamp.svg" alt="">
+                <img src="assets/images/images/clients/serpmetrics.svg" alt="">
+            </div>
+        </div>
+
+    </section>
+    <section class="collab">
+        <p class="title">Tem interesse em fazer algum trabalho comigo?</p>
+        <p class="subtitle">Estou sempre aberto a discutir projetos e possiveis parcerias de trabalho.</p>
+        <a href="" class="button">Começar uma conversa</a>
     </section>
 
     <script type="text/javascript" src="assets/js/script.js"></script>
